# app/Http/Resources/ClientResource.php
@@ -27,7 +27,7 @@ class ClientResource extends JsonResource
             'created_at' => $this->created_at,
             'updated_at' => $this->updated_at,
             'deleted_at' => $this->deleted_at,
-            'contatos' => $this->contatos ?? [],
+            'contatos' => $this->contacts ?? [],
         ];
     }
 }
